--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             crossorigin="anonymous"
             
         />
-        <link rel="icon" href="https://th.bing.com/th/id/OIP.astppKu4BRpLuVHbUyf3fQHaDu?w=310&h=168&c=7&r=0&o=5&dpr=1.3&pid=1.7"> 
+        <link rel="icon" href="https://th.bing.com/th?id=OIP.pyfvqzCxCx7jo5K83Kpt4QHaHa&w=250&h=250&c=8&rs=1&qlt=90&o=6&dpr=1.3&pid=3.1&rm=2"> 
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     </head>
