--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                    
         </header>
         <main>
-            <div class="container-fluid-2">
+            <div class="container-fluid">
                 <div class="row">
                     
                     <div class="col-3">
